--- a/Exploratory Data Analysis/Ensemble Members Analysis.ipynb
+++ b/Exploratory Data Analysis/Ensemble Members Analysis.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "# Change for own use\n",
     "ROOT = \"ROOT/\"\n",
-    "data_path = ROOT+\"Data Preprocessings/\""
+    "data_path = ROOT+\"preprocessed_data/\""
    ]
   },
   {
