--- a/Model Building/Model Building (lead-time-separated approach).ipynb
+++ b/Model Building/Model Building (lead-time-separated approach).ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "# Change paths for own use\n",
-    "data_path = \"ROOT/Data Preprocessings/\"\n",
+    "data_path = \"ROOT/preprocessed_data/\"\n",
     "model_export_path = \"ROOT/trained_models/lead_time_separated/\"\n",
     "result_export_path = \"ROOT/test_results_df/lead_time_separated/\""
    ]
