--- a/Model Building/Model Building (quantile regression forest).ipynb
+++ b/Model Building/Model Building (quantile regression forest).ipynb
@@ -41,7 +41,9 @@
    "outputs": [],
    "source": [
     "# Change paths for own use\n",
-    "x"
+    "data_path = \"ROOT/preprocessed_data/\"\n",
+    "model_export_path = \"ROOT/trained_models/lead_time_continuous/\"\n",
+    "result_export_path = \"ROOT/test_results_df/lead_time_continuous/\""
    ]
   },
   {
