--- a/Performance Analysis/Feature Importance.ipynb
+++ b/Performance Analysis/Feature Importance.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "# Change paths for own use\n",
     "ROOT = \"ROOT/\"\n",
-    "data_path = ROOT+\"Data Preprocessings/\"\n",
+    "data_path = ROOT+\"preprocessed_data/\"\n",
     "model_path = ROOT+\"trained_models/lead_time_continuous/\""
    ]
   },
